--- a/figures/tikz/SCOMP_diagram_v3.tex
+++ b/figures/tikz/SCOMP_diagram_v3.tex
@@ -25,7 +25,7 @@
 
 % Additional choices below decision
 \node[terminal, below=of choice_c] (choice_c2) {Firms revise their offers};
-\node[terminal, below=of choice_c2] (choice_c3) {Buyer receives offer and chooses one (including internal offers)};
+\node[terminal, below=of choice_c2] (choice_c3) {Buyer receives offer and chooses one (including initial offers)};
 
 
 % **CHANGES MARKED**: Third row - decision and outcomes (left to right)
