--- a/Ppt/251203_pitchpizza_v2.tex
+++ b/Ppt/251203_pitchpizza_v2.tex
@@ -69,7 +69,7 @@
 ]{biblatex}
 \addbibresource{../references.bib}
 
-\title{Equilibrium effects of price updating: evidence from a centralized marketplace for annuities}
+\title{Equilibrium effects of revised offers: evidence from a centralized marketplace for annuities}
 %\subtitle{A Mini Literature Overview}
 
 \author{%
@@ -104,18 +104,13 @@ Diego Cussen
     \end{itemize}
 
     \item What is  the welfare impact of allowing consumers to request revised offers?
-    \item Effects of prohibiting revised offers: 
+    \item Effects of  revised offers: 
     
     \begin{itemize}
-        \item Direct impact: buyer can no longer improve initial offer. 
-        \item Indirect effect: buyers improve their initial offers 
+        \item Permits discrimination based on search costs 
+        \item Decreases information rents 
     \end{itemize}
 
-    %Economic forces at play: 
-    %\begin{itemize}
-    %    \item Learning: firms learn competitors' prices and can best respond.
-    %  \item Discrimination: if search cost are correlated with preferences. [not today] 
-    %\end{itemize}
     \note{Mention that only firms who made an initial offer can revise their offers. }
     
 \end{itemize}
@@ -176,9 +171,18 @@ Diego Cussen
     \item Annuities: transform a stock of savings into a stream of payments until death.
     \item Reasons to buy: insure against overlife risk
         \item Profits of firm $j$: 
+    %\begin{align*}
+    %\pi_{ji}(F) = S_i-  \mathbb{E}^j_{T} \left[\sum_{t=1}^T\frac{F}{(1+r_j)^t}|x_i \right]
+    %\end{align*}
+
+    %\begin{align*}
+    %\pi_{ji}(F) = S_i-  \sum_{t=1}^T Pr_j (\text{alive}|x_i)\frac{F}{(1+r_j)^t}
+    %\end{align*}
+
     \begin{align*}
-    \pi_{ji}(F) = S_i-  \mathbb{E}^j_{T} \left[\sum_{t=1}^T\frac{F}{(1+r_j)^t}|x_i \right]
+    \pi_{ji}(F) = S_i -  \sum_{t=1}^T \frac{\Pr_j(\text{alive} \mid x_i)}{(1+r_j)^t} F 
     \end{align*}
+
     % if it was only financing cost, it would be a monopoly
    
      $S$: stock of savings, $F$: per period annuity payment, $x_i$: buyer mortality factors
@@ -235,7 +239,6 @@ Particularities of the data/setting:
     \item One observes all the offers received by the buyers 
     \item One observes the same information as the firms (gender, age, savings)
 \end{itemize}
-\textcolor{red}{[best way of leveraging this particularities?]}
 \note{
     \begin{itemize}
         \item I observe only the revised offers made not the requested ones. 
@@ -342,7 +345,7 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
     where  \\
     $ \text{Avg. gap }_{ij} = \frac{1}{F_{ij}^I}\left(\frac{1}{J-1}\sum_{k \neq j} F_{ik}^I - F_{ij}^I\right) $\\ 
     $ \text{Max. gap } = \frac{1}{F_{ij}^I}\left(\max_{k \neq j} F_{ik}^I - F_{ij}^I\right)$
-    \item How to deal with selection (observe revisions not requests)? 
+    
 \end{itemize}
 \end{column}
 \hfill
@@ -379,23 +382,6 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 \end{columns}
 \end{frame}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Model}
 
@@ -403,11 +389,11 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 
 \begin{frame}{Asymmetric-Information Search Model}
 \begin{itemize}
-    \item $J$ retirement insurers compete in a centralized marketplace.
-    \item Buyer type $\theta$ (mortality risk) is private; prior density $f_0(\theta)$.
-    \item Each firm $j$ observes a noisy signal $\hat \theta_j \sim \mathcal{N}(\theta, \sigma_j^2)$ before posting its initial offer $F_j^{1T}$.
-    \item Buyers draw search cost $s_i$ from a joint distribution $F(s,\theta)$ that can correlate search propensity with risk.
-    \item Timeline:
+    \item Buyer wants to annuitize $W$ unit of savings. 
+    \item $J$ firms compete in a centralized marketplace.
+    \item Buyer has private type (mortality risk) $\theta$; prior density $f_0(\theta)$.
+    \item Each firm $j$ observes a noisy signal $\hat \theta_j \sim \mathcal{N}(\theta, \sigma_j^2)$ with pdf $\phi(\hat \theta_j; \theta, \sigma_j)$ before posting its initial offer $F_j^{1T}$.
+    \item Buyers draw search cost $s_i$ from a joint distribution $F(s,\theta)$    \item Timeline:
     \begin{enumerate}
         \item Firms post initial offers using private signals.
         \item Buyer either accepts (no search) or pays $s_i$ to request revised offers (search).
@@ -456,27 +442,45 @@ Buyers do not always buy highest annuity. Average foregone value is 1.57 monthly
 
 \begin{frame}{Posterior Beliefs}
 \begin{itemize}
-    \item Non-searchers keep firms in the dark: each firm only observes $\hat \theta_j$.
-    \item Searchers reveal the full vector $\hat \theta$, so all firms share information.
+    \item Beliefs are updated based on the probability of the consumer choosing firm $j$.
+    
+
+    %\item Non-searchers keep firms in the dark: each firm only observes $\hat \theta_j$.
+    %\item Searchers reveal the full vector $\hat \theta$, so all firms share information.
 \end{itemize}
 \small
 \begin{align*}
-E(\theta \mid \hat \theta_j, D=j, S=0) &= \frac{\int \theta \, \widehat D_{j0}(\theta, \hat \theta_j) \, \varphi(\hat \theta_j; \theta, \sigma_j) f_0(\theta) d\theta}{\int \widehat D_{j0}(\theta', \hat \theta_j) \, \varphi(\hat \theta_j; \theta', \sigma_j) f_0(\theta') d\theta'}, \\[0.4em]
-E(\theta \mid \hat \theta, D=j, S=1) &= \frac{\int \theta \, \widehat D_{j1}(\theta, \hat \theta) \, \phi(\hat \theta; \theta) f_0(\theta) d\theta}{\int \widehat D_{j1}(\theta', \hat \theta) \, \phi(\hat \theta; \theta') f_0(\theta') d\theta'}.
+E(\theta \mid \hat \theta_j, D=j, S=0) &= \frac{\int \theta \, 
+%\textcolor{blue}{\widehat D_{j0}(\theta, \hat \theta_j)}
+\textcolor{blue}{\Pr(D = j, S= 0 \mid \theta, \hat \theta_j)}
+\, \phi(\hat \theta_j; \theta, \sigma_j) f_0(\theta) d\theta}{\int 
+%\textcolor{blue}{\widehat D_{j0}(\theta', \hat \theta_j)}
+%\widehat D_{j0}(\theta', \hat \theta_j) 
+\textcolor{blue}{\Pr(D = j, S= 0 \mid \theta', \hat \theta_j)}
+\, \phi(\hat \theta_j; \theta', \sigma_j) f_0(\theta') d\theta'}, \\[0.4em]
+E(\theta \mid \hat \theta, D=j, S=1) &= \frac{\int \theta \, 
+%\widehat D_{j1}(\theta, \hat \theta) 
+\textcolor{blue}{\Pr(D = j, S= 1 \mid \theta, \hat \theta)}
+\, \phi(\hat \theta; \theta) f_0(\theta) d\theta}{\int 
+%\widehat D_{j1}(\theta', \hat \theta) 
+\textcolor{blue}{\Pr(D = j, S= 1 \mid \theta', \hat \theta)}
+\, \phi(\hat \theta; \theta') f_0(\theta') d\theta'}.
 \end{align*}
 \normalsize
 \begin{itemize}
     \item Terms $\widehat D_{js}$ weight beliefs by the probability the consumer chooses firm $j$ in stage $s$.
 \end{itemize}
 \end{frame}
+ 
 
+% ...existing code...
 %%%%%
 
 \begin{frame}{Profits and Equilibrium}
 \small
 \begin{align*}
-    \pi_j &= \int_{\theta} \int_{\hat \theta} (F_j^{1T}(\hat \theta_j) - k_j \theta) \, \Pr(D=j \mid \theta, \hat \theta, S=0) (1-\pi_1(\theta, \hat \theta)) \, \phi(\hat \theta; \theta) f_0(\theta) d\hat \theta d\theta \\
-    &\quad + \int_{\theta} \int_{\hat \theta} (F_j^{2T}(\hat \theta) - k_j \theta) \, \Pr(D=j \mid \theta, \hat \theta, S=1) \pi_1(\theta, \hat \theta) \, \phi(\hat \theta; \theta) f_0(\theta) d\hat \theta d\theta.
+    \pi_j &= \int_{\theta} \int_{\hat \theta} (W - F_j^{1T}(\hat \theta_j)  k_j \theta) \, \Pr(D=j \mid \theta, \hat \theta, S=0) (1-\pi_1(\theta, \hat \theta)) \, \phi(\hat \theta; \theta) f_0(\theta) d\hat \theta d\theta \\
+    &\quad + \int_{\theta} \int_{\hat \theta} (W - F_j^{2T}(\hat \theta) k_j \theta) \, \Pr(D=j \mid \theta, \hat \theta, S=1) \pi_1(\theta, \hat \theta) \, \phi(\hat \theta; \theta) f_0(\theta) d\hat \theta d\theta.
 \end{align*}
 \normalsize
 \begin{itemize}
@@ -484,6 +488,16 @@ E(\theta \mid \hat \theta, D=j, S=1) &= \frac{\int \theta \, \widehat D_{j1}(\th
     \item Equilibrium trades off the profit erosion from better information in the aftermarket with the option value of serving non-searchers at higher markups.
 \end{itemize}
 \end{frame}
+
+\begin{frame}{Equilibrium Conditions}
+\begin{itemize}
+    \item 
+\end{itemize}
+\end{frame}
+
+
+
+
 
 %%%%%
 
@@ -511,10 +525,6 @@ E(\theta \mid \hat \theta, D=j, S=1) &= \frac{\int \theta \, \widehat D_{j1}(\th
 \hyperlink{slide:motivation}{\beamerbutton{Go back: Motivation}}
 \end{frame}
 
-
-
-
-
 \begin{frame}{Initial prices}\label{slide:fig_offer_certificate}    
 \begin{figure}[H]
 \centering{}%
@@ -527,22 +537,4 @@ E(\theta \mid \hat \theta, D=j, S=1) &= \frac{\int \theta \, \widehat D_{j1}(\th
 \end{frame}
 
 
-\begin{frame}{Connection model with setting}\label{slide:connection}    
-\begin{itemize}
-    \item Firms cost: 
-    \begin{align*}
-        c_{ij} =  \mathbb{E}^j_{T} \left[\sum_{t=1}^T\frac{1}{(1+r_j)^t} \, \middle| \, x_i \right]
-    \end{align*}  
-    \item Firm prices: $p_j = S_i/F_{ij}$
-    \item Demand: $ D_{ij}(F_{ij}) = F_{ij}\mathds{1}(\text{i chooses j})  $
-    \item Firm profits: 
-    \begin{align*}
-        \pi_{ij}(F) = (p_j - c_{ij}) D_{ij}(F_{ij})  %= \left(\frac{S}{F_{ij}}-   \mathbb{E}^j_{T} \left[\sum_{t=1}^T\frac{1}{(1+r_j)^t}|x_i \right]\right) F_{ij}\mathds{1}(\text{i chooses j}) 
-        = \left(S_i- \mathbb{E}^j_{T} \left[\sum_{t=1}^T\frac{F_{ij}}{(1+r_j)^t} \, \middle| \, x_i \right]\right)\mathds{1}(\text{i chooses j}) 
-    \end{align*}
-\end{itemize}
-
-\hyperlink{slide:timeline}{\beamerbutton{Go back: Timeline}}
-
-\end{frame}
 \end{document}
